# agent-maestro

./: .gitignore  .mcp.json  APP_CONTEXT.md  CLAUDE.md  FEATURE_PROJECT_SOUNDS.md  FRIENDLY_README.md  ModalSweep-CONTRACT.md  OPENSOURCE_READINESS_REPORT.md  README.md  STATUS_ANALYSIS_REPORT.md  SUBTASK_SESSION_BADGES_FIX.md  SessionStats-CONTRACT.md  TMUX_MIGRATION.md  Terminal-CONTRACT.md  WORKTREE_IMPLEMENTATION_PLAN.md  graph-quiz.html  install.ps1  install.sh  load-balancer-game.html  load-balancer-quiz.html  maestro_cli_consolidated_report_2026-02-20.md  maestro_cli_testerA_phases1-9_2026-02-20.md  maestro_phase1_baseline_2026-02-20.md  modal-listener.js  package-lock.json  package.json  sliding-puzzle.html  test-env-vars.sh
.github/: PULL_REQUEST_TEMPLATE.md
.maestro/: terminal-rendering-analysis.md
Express Redis Cloudflare Integration/: 01-initial-zookeeper-analysis.md  README.md
deploy/: README.md  deploy-ec2-tailscale.sh  deploy.sh  maestro-server.service  migrate-data.sh  nginx.conf
docs/: 30-day-plan.md  APP_CONTEXT.md  APP_CONTEXT_REVIEW.md  ENV-VARS-FIX.md  (+155 more)
maestro-ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod-novscode.json  tauri.conf.prod.json
maestro-ui/src-tauri/capabilities/: default.json
maestro-ui/src-tauri/icons/: icon.icns
maestro-ui/src-tauri/src/: app_info.rs  app_menu.rs  assets.rs  claude_logs.rs  codex_logs.rs  file_manager.rs  files.rs  main.rs  persist.rs  pty.rs  recording.rs  secure.rs  skills.rs  ssh.rs  ssh_fs.rs  startup.rs  tmux_coordination.rs  tray.rs
maestro-ui/src-tauri/tests/: tmux_integration_test.rs
(+1327 files in other folders)
