[package]
name = "agents-ui"
version = "0.3.0"
description = "Agent Maestro desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
keyring = "2.3"
rand_core = "0.6"
portable-pty = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-drag = "2.1.0"
dirs = "5"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
custom-protocol = ["tauri/custom-protocol"]
